Remove alt attribute from profile image

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
   <div class="container">
     <section class="profile">
-      <img src="pp.JPG" alt="Lin Lett">
+      <img src="pp.JPG">
       <div class="profile-info">
         <p><strong>Name:</strong> Lin Lett(린렛)</p>
         <p><strong>Std No:</strong> 24102618 </p>
