--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     <section>
       <div class="title"></div>
       <ul class="chapter-list">
-        <li><a href="project/app.js" class="chapter-link">PROJECT</a></li>
+        <li></li><a href="https://team-28-web-project.onrender.com" class="chapter-link">PROJECT</a></li>
         <li><a href="Chapter1.html" class="chapter-link">Chapter 1</a></li>
         <li><a href="Chapter2.html" class="chapter-link">Chapter 2</a></li>
         <li><a href="Chapter3.html" class="chapter-link">Chapter 3</a></li>
