--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
       <img src="pp.JPG">
       <div class="profile-info">
         
-        <p><strong>Members:</strong></p>
+        <p><strong></strong></p>
         <p>Lin Lett (린렛) — Std No: 24102618</p>
         <p>Yee Mon Oo (이문우) — Std No: 24102627</p>
        </div>
